Extract DstTuple class (#398)
* Extracted LeaderboardItem

* fix

* fix

* fix